--- a/charity_deep_learning.ipynb
+++ b/charity_deep_learning.ipynb
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f9074305",
+   "id": "3bee43d6",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a3b959c",
+   "id": "d3057f18",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb9e9981",
+   "id": "93d22672",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58065e9f",
+   "id": "0e64eebc",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d75620e1",
+   "id": "9f1cce13",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f90ecade",
+   "id": "a9857275",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0ada5fb1",
+   "id": "12bf98b9",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c52946f9",
+   "id": "46698604",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dc1d54ab",
+   "id": "df9fe5e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "77560d44",
+   "id": "ebf34858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eb304a4b",
+   "id": "6ee43dbc",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9cf239a0",
+   "id": "46b479b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6ad40c9c",
+   "id": "e9a97df1",
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "85ce58bc",
+   "id": "fef0ffd8",
    "metadata": {},
    "outputs": [
     {
@@ -1277,12 +1277,12 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "89bb8f9f",
+   "id": "90f3c7a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# export model to HDF5 file\n",
-    "nn.save_weights(\"Model\\charity_deep_learning.h5\", overwrite=True, save_format=None, options=None)"
+    "nn.save_weights(\"Model/charity_deep_learning.h5\", overwrite=True, save_format=None, options=None)"
    ]
   }
  ],
